--- a/rules/generic_de/ruleset.yml
+++ b/rules/generic_de/ruleset.yml
@@ -9,14 +9,18 @@ weights:
   topical_focus: 0.15
   entity_binding: 0.10
 
+sql:
+  table: crawl_pages
+  crawlIdField: crawl_id
+  urlField: url
+
 checks:
-  # --- Struktur: Headings ---
   - id: h1_exactly_one
     severity: high
     dimension: structure
     rule:
-      op: count
-      selector: h1
+      op: range
+      field: h1_count
       min: 1
       max: 1
     penalty: 12
