--- a/rules/generic_de/ruleset.yml
+++ b/rules/generic_de/ruleset.yml
@@ -26,6 +26,17 @@ checks:
     penalty: 12
     message: "Es muss genau eine H1 geben."
 
+  - id: h1_exactly_one
+    severity: high
+    dimension: structure
+    rule:
+      op: range
+      field: h1_count
+      min: 1
+      max: 1
+    penalty: 12
+    message: "Es muss genau eine H1 geben."
+
   - id: h2_at_least_two
     severity: medium
     dimension: structure
